added mean, variance, and covariance tuning curve functions.

--- a/src/notebooks/data_processing.ipynb
+++ b/src/notebooks/data_processing.ipynb
@@ -123,6 +123,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 265,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(72, 147)"
+      ]
+     },
+     "execution_count": 265,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(spike_counts_norm, axis=2).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def compute_mean_tc(spike_counts_norm):\n",
+    "    return np.mean(spike_counts_norm, axis=2)\n",
+    "\n",
+    "def compute_var_tc(spike_counts_norm):\n",
+    "    return np.var(spike_counts_norm, axis=2)\n",
+    "\n",
+    "def compute_cov_tc(spike_counts_norms):\n",
+    "    tc_cov = np.zeros((num_neurons, num_neurons, num_orientations))\n",
+    "    for i in range(num_orientations):\n",
+    "        tc_cov[:, :, i] = np.cov(spike_counts_norm[i])\n",
+    "    return tc_cov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
